<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="DummyContentDescription">dummy</string>
    <string name="rate_us_key_demo">rate_us_key_demo</string>
    <string name="rate_us_manager_share_title">Check out AVG Alarm Clock Xtreme Free + Timer for Android!</string>
    <string name="rate_us_manager_share_subject">Alarm Clock Xtreme on my Android device gets me out of bed. Check it out!</string>
    <string name="rate_us_manager_share_body">AVG Alarm Clock Xtreme is an app that includes an alarm clock and timer, and integrates with Stop Watch Xtreme to solve all timing needs. Go to %1$s or search AVG on your App Store</string>
    <string name="app_name">Alarm Clock</string>
    <string name="upgrade_dialog_title">License updated</string>
    <string name="upgrade_dialog_pro_upgrade_message">You have upgraded to %1$s. Enjoy!</string>
    <string name="upgrade_dialog_downgrade_message">"You are using now %1$s.
Upgrade now to get our PRO features."</string>
    <string name="upgrade_dialog_trial_extend_message">Your %1$s trial has been extended. The trial ends in %2$s days. Enjoy!</string>
    <string name="upgrade_dialog_close_button">Got it</string>
    <string name="upgrade_dialog_downgrade_positive_button"><b>Upgrade now</b></string>
    <string name="upgrade_dialog_downgrade_negative_button">No, thanks</string>
    <string name="upgrade_notification_licence_pro">Upgraded to PRO</string>
    <string name="upgrade_notification_licence_free">Updated to FREE</string>
    <string name="upgrade_notification_trail_extended">PRO trial extended</string>
    <string name="help_preference">Help</string>
    <string name="ias_help_contact_header">Contact Us</string>
    <string name="ias_help_contact_body">Report a problem or send feedback</string>
    <string name="ias_progress_dialog_title">Connecting...</string>
    <string name="ias_alert_dialog_title">Communication error</string>
    <string name="ias_alert_dialog_message">"Unable to connect to server. Please make sure you're connected to the Internet."</string>
    <string name="title_help_preference">FAQs</string>
    <string name="summary_intent_preference">See our frequently asked questions</string>
    <string name="tos">Terms of Service</string>
    <string name="tos_summary">Review our Terms of Service</string>
    <string name="avg_title">AVG Technologies</string>
    <string name="avg_summary">Try our other top-rated Android apps</string>
    <string name="follow_us_preference">Follow Us</string>
    <string name="videos_title">"AVG's YouTube Channel"</string>
    <string name="videos_summary">Watch our video tutorials</string>
    <string name="title_About_preference">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="install_now">Install Now</string>
    <string name="connection_error">Sorry, there was a connection error. Please try again.</string>
    <string name="main_menu_share">Share</string>
    <string name="main_menu_share_subject">Check out AVG AntiVirus FREE for Android!</string>
    <string name="language_default">default</string>
    <string name="alarm_popup_enable">Enable</string>
    <string name="alarm_popup_edit">Edit</string>
    <string name="alarm_popup_duplicate">Duplicate</string>
    <string name="alarm_popup_set_default">Set as default</string>
    <string name="alarm_popup_preview">Preview</string>
    <string name="alarm_popup_skip_next">Skip next</string>
    <string name="alarm_popup_delete">Delete</string>
    <string name="share_button_text">Share app</string>
    <string name="rate_button_text">Rate us</string>
    <string name="about_app_title">Alarm Clock xTreme</string>
    <string name="about_term_of_service">Terms of Service</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_more_avg_apps">More AVG apps</string>
    <string name="general_settings_clock_24hour">Use 24-hour format</string>
    <string name="general_settings_first_day_the_week">First day of the week</string>
    <string name="general_settings_background">Background</string>
    <string name="general_settings_background_summary">Choose a background image</string>
    <string name="general_settings_show_notification">Show notifications</string>
    <string name="general_settings_unlock_title">Show alarm on lock screen</string>
    <string name="general_settings_unlock_summary">When disabled, your screen will not light up</string>
    <string name="general_settings_vacation_mode_title">Vacation mode</string>
    <string name="general_settings_vacation_mode_summary">Repeating alarms will not be triggered when vacation mode is enabled</string>
    <string name="general_settings_language_title">Language</string>
    <string name="general_settings_use_phone_speakers_title">Use phone speakers</string>
    <string name="general_settings_use_phone_speakers_summary">Play sound on speakers even when headphones are plugged in</string>
    <string name="alarm_setting_category_basic">BASIC SETTINGS</string>
    <string name="alarm_setting_category_snooze">SNOOZING OPTIONS</string>
    <string name="alarm_setting_category_math">MATH SETTINGS</string>
    <string name="alarm_setting_category_alarm">ALERT AND VOLUME SETTINGS</string>
    <string name="alarm_setting_alarm_name">Alarm name</string>
    <string name="alarm_setting_sound_type">Sound type</string>
    <string name="alarm_setting_sound_rington">Ringtone</string>
    <string name="alarm_setting_sound_music">Select music</string>
    <string name="alarm_setting_sound_artist">Select artist</string>
    <string name="alarm_setting_sound_playlist">Select playlist</string>
    <string name="alarm_setting_sound_application">Select application</string>
    <string name="alarm_setting_dismiss">Dismiss alarms by</string>
    <string name="alarm_setting_snooze">Snooze alarms by</string>
    <string name="alarm_setting_auto_snooze">Auto-snooze duration</string>
    <string name="alarm_setting_auto_dismiss">Auto-dismiss duration</string>
    <string name="alarm_setting_snooze_duration">Snooze duration</string>
    <string name="alarm_setting_snooze_decrease_duration">Shorten snoozes</string>
    <string name="alarm_setting_max_snoozes">Max snoozes</string>
    <string name="alarm_setting_large_snooze_button">Large snooze button</string>
    <string name="alarm_setting_vibrate">Vibrate</string>
    <string name="alarm_setting_volume_cresendo">Volume crescendo</string>
    <string name="alarm_setting_volume_cresendo_summary">Gradually increase sound volume</string>
    <string name="alarm_setting_volume">Max alarm volume</string>
    <string name="alarm_setting_volume_increase_time">Time to max volume</string>
    <string name="alarm_settin_silent_mode">Play in silent mode</string>
    <string name="alarm_settin_silent_mode_summary">Play sound even when the device is in silent mode</string>
    <string name="alarm_setting_math_difficulty">Math difficulty level</string>
    <string name="alarm_setting_math_num_dismiss">Dismiss - Number of problems</string>
    <string name="alarm_setting_math_num_snooze">Snooze - Number of problems</string>
    <string name="alarm_setting_preview">Preview</string>
    <string name="alarm_setting_advanced">Advanced settings</string>
    <string name="timer_settings_keep_screen_on">Keep screen on</string>
    <string name="timer_settings_keep_screen_on_summary">Keep screen on while running</string>
    <string name="alarm_setting_math_allow_pass_title">Allow pass</string>
    <string name="alarm_setting_math_allow_pass_summary">Allow passing problems while solving math</string>
    <string name="timer_setting_volume">Max timer volume</string>
    <string name="timer_setting_silent_mode">Play in silent mode</string>
    <string name="set_alarm">Set alarm</string>
    <string name="all">All</string>
</resources>